; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_wm831x-core.c_wm831x_device_exit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_wm831x-core.c_wm831x_device_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wm831x = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wm831x*)* @wm831x_device_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wm831x_device_exit(%struct.wm831x* %0) #0 {
  %2 = alloca %struct.wm831x*, align 8
  store %struct.wm831x* %0, %struct.wm831x** %2, align 8
  %3 = load %struct.wm831x*, %struct.wm831x** %2, align 8
  %4 = call i32 @wm831x_otp_exit(%struct.wm831x* %3)
  %5 = load %struct.wm831x*, %struct.wm831x** %2, align 8
  %6 = getelementptr inbounds %struct.wm831x, %struct.wm831x* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @mfd_remove_devices(i32 %7)
  %9 = load %struct.wm831x*, %struct.wm831x** %2, align 8
  %10 = call i32 @wm831x_irq_exit(%struct.wm831x* %9)
  %11 = load %struct.wm831x*, %struct.wm831x** %2, align 8
  %12 = call i32 @kfree(%struct.wm831x* %11)
  ret void
}

declare dso_local i32 @wm831x_otp_exit(%struct.wm831x*) #1

declare dso_local i32 @mfd_remove_devices(i32) #1

declare dso_local i32 @wm831x_irq_exit(%struct.wm831x*) #1

declare dso_local i32 @kfree(%struct.wm831x*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
